Sat May 26 07:19:48 2001  Usaku Nakamura  <usa@osb.att.ne.jp>

	* win32/win32.c (opendir): add const directive.

Sat May 26 07:00:05 2001  Usaku Nakamura  <usa@osb.att.ne.jp>

	* MANIFEST: add win32/dir.h .

Sat May 26 00:15:57 2001  Usaku Nakamura  <usa@osb.att.ne.jp>

	* win32/dir.h: replace missing/dir.h .

	* dir.c: ditto.

Fri May 25 14:19:25 2001  K.Kosako  <kosako@sofnec.co.jp>

	* string.c (rb_str_replace): add taint status infection
	  (OBJ_INFECT()).

	* string.c (rb_str_crypt): ditto.

	* string.c (rb_str_ljust): ditto.

	* string.c (rb_str_rjust): ditto.

	* string.c (rb_str_center): ditto.

Fri May 25 01:55:32 2001  Akinori MUSHA  <knu@iDaemons.org>

	* MANIFEST: Re-adjust the entries to coincide with HEAD.

Fri May 25 01:36:52 2001  Akinori MUSHA  <knu@iDaemons.org>

	* MANIFEST: update the entries I forgot to add or remove.

Thu May 24 16:08:21 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* mkconfig.rb: autoconf 2.50 support.

Thu May 24 14:23:35 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_yield_0): need argument adjustment for C defined
	  blocks too.

Tue May 22 17:10:35 2001  K.Kosako  <kosako@sofnec.co.jp>

	* variable.c (rb_alias_variable): should not allow variable
	  aliasing if $SAFE >= 4.

Mon May 21 15:26:05 JST 2001  Keiju Ishitsuka <keiju@ishitsuka.com>

	* lib/irb/multi-irb.rb: delete japanese messages.

Mon May 21 13:15:25 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* bignum.c (rb_big2str): t should be protected from GC.

Sun May 20 00:28:43 2001  Akinori MUSHA  <knu@iDaemons.org>

	* ext/socket/extconf.rb: do not clobber $CFLAGS when setting
	  -DSOCKS.

Fri May 18 05:42:28 2001  Akinori MUSHA  <knu@iDaemons.org>

	* lib/thread.rb: rescue ThreadError in case the thread is dead
	  just before calling Thread#run.

Fri May 18 05:29:21 2001  Akinori MUSHA  <knu@iDaemons.org>

	* lib/mkmf.rb (xsystem): make a temporary fix to get $(...) macros
	  properly expanded on a command execution.
